# vaultwarden-icons-worker

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
.github/workflows/: ci.yml
src/: fallback.ts  favicon.ts  index.ts  sanitize.ts  ssrf.ts  svg.ts
svg-sanitizer/: Cargo.toml
svg-sanitizer/pkg/: package.json  svg_sanitizer.d.ts  svg_sanitizer.js  svg_sanitizer_bg.js  svg_sanitizer_bg.wasm  svg_sanitizer_bg.wasm.d.ts
svg-sanitizer/src/: lib.rs
test/: favicon.test.ts  sanitize.test.ts  ssrf.test.ts  worker.test.ts
